syntax = "proto3";

import "google/protobuf/timestamp.proto";

package proto;

option java_package = "org.example.protobuf.address";
option java_outer_classname = "CryptoAddressProto";

service CryptoAddressService {
  rpc AddCryptoAddress(AddCryptoAddressRequest) returns (AddCryptoAddressResponse);
  rpc SetDerivedIndices(SetDerivedIndicesRequest) returns (SetDerivedIndicesResponse);
  rpc UpdateDerivedIndex(UpdateDerivedIndexRequest) returns (UpdateDerivedIndexResponse);
  rpc GetWalletData(GetWalletDataRequest) returns (GetWalletDataResponse);
}

message AddCryptoAddressRequest {
  string app_id = 1;
  string address = 2;
  string pub_key = 3;
  repeated int32 derived_indices = 4;
}

message AddCryptoAddressResponse {
  google.protobuf.Timestamp timestamp = 1;
  int64 user_id = 2;
  int64 address_id = 3;
  string address = 4;
}

message UpdateDerivedIndexRequest {
  string app_id = 1;
  string general_address = 2;
  uint64 old_index = 3;
  uint64 new_index = 4;
}

message UpdateDerivedIndexResponse {
  google.protobuf.Timestamp timestamp = 1;
  uint64 new_index = 2;
}

message SetDerivedIndicesRequest {
  uint64 user_id = 1;
  string general_address = 2;
  repeated int32 derived_indices = 3;
}

message SetDerivedIndicesResponse {
  google.protobuf.Timestamp timestamp = 1;
}

message GetWalletDataRequest {
  string address = 1;
}

message GetWalletDataResponse {
  google.protobuf.Timestamp timestamp = 1;
  uint64 user_id = 2;
  repeated int32 derived_indices = 3;
}